--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1
 
+    - name: Verify AWS CLI
+      run: |
+        aws --version
+        aws sts get-caller-identity
+
     - name: Deploy static site to S3 bucket
       run: aws s3 sync . s3://devops-portfolio-bucket --delete
+
